# topo-flow-limits

./: .gitignore  AUTHOR_REWRITE_CHECKLIST.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: assemble_era5.py  fetch_era5.py  fetch_era5_fast.py  fetch_fx.py  fetch_ibtracs.py  fetch_traffic.py  fx_rates.json  ibtracs_wp_2020.csv  probe_era5.py
experiments/: _util.py  make_manifest.py  plot_scaling.py  run_all.py  run_bic_boundary.py  run_confusability.py  run_fano.py  run_gpu_mc.py  run_partial_sampling.py  run_phase_transition.py  run_plugin.py  run_real_cyclone.py  run_real_fx.py  run_real_traffic.py  run_scaling.py  run_second_order.py  run_selection.py
paper/: main.tex  main_text.txt  refs.bib  supplement.tex
results/: bic_boundary.json  confusability.json  fano.json  gpu_mc.json  manifest.json  partial_sampling.json  phase_transition.json  plugin.json  real_cyclone.json  real_fx.json  real_traffic.json  run_all_manifest.json  scaling.json  second_order.json  selection.json
results/hardware/: server_probe.txt
src/tfl/: __init__.py  complexes.py  estimators.py  estimators_mf.py  generative.py  geo.py  gpu.py  hodge.py  limits.py  provenance.py  selection.py  tntp.py
tests/: test_artifact_consistency.py  test_bic_boundary.py  test_estimators_mf.py  test_excitation.py  test_geo.py  test_hodge.py  test_second_order.py  test_theory_vs_sim.py
