[project]
name = "topo-flow-limits"
version = "0.1.0"
description = "Fundamental limits of higher-order structure identifiability from edge-flow observations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "networkx>=3.2",
    "cvxpy>=1.5",
    "matplotlib>=3.8",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tfl"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
